--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "dev": "ts-node-dev --respawn --transpileOnly ./server.js",
+    "tsc": "tsc"
   },
   "dependencies": {
+    "@types/express": "^4.16.1",
+    "dotenv": "^8.0.0",
     "express": "^4.12.3",
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "1.5.0",
     "morgan": "^1.5.2",
     "path": "^0.11.14",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "ts-node-dev": "^1.0.0-pre.39"
   },
   "devDependencies": {
     "parcel-bundler": "^1.6.1",
